--- a/index.html
+++ b/index.html
@@ -134,6 +134,12 @@
 							<div class="info-thumb">
 								<img src="img/bateau.jpg" class="img-fluid" alt="">
 							</div>
+							<br><br>
+							<div class="col-sm">
+								<div class="info-thumb">
+									<img src="img/pont.jpg" class="img-fluid" alt="">
+								</div>
+							</div>
 						</div>
 						<div class="col-lg-6 col-md-12 no-padding info-rigth">
 							<div class="info-content">
@@ -158,6 +164,9 @@ Le but des croisières est de faire participer tout le monde aux différents asp
 								<div class="container">
 									<div class="row">
     								<div class="col-sm">
+											<br><br>
+											<br><br>
+
 											<p>
 												<h5>Caractéristiques</h5>
 												<br>
@@ -171,11 +180,7 @@ Le but des croisières est de faire participer tout le monde aux différents asp
 												</ul>
 											</p>
 										</div>
-										<div class="col-sm">
-											<div class="info-thumb">
-												<img src="img/pont.jpg" class="img-fluid" alt="">
-											</div>
-										</div>
+
 									</div>
 							</div>
 								</div>
@@ -192,46 +197,40 @@ Le but des croisières est de faire participer tout le monde aux différents asp
 					<div class="row d-flex justify-content-center">
 						<div class="menu-content pb-30 col-lg-8">
 							<div class="title text-center">
-								<h1 class="mb-10">Latest Project on the go</h1>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> labore  et dolore magna aliqua.</p>
+								<h1 class="mb-10">Programme 2019</h1>
+								<p>Programme prévisionnel Avril - Septembre 2019</p>
 							</div>
 						</div>
 					</div>
 					<div class="row justify-content-center d-flex">
 						<div class="active-works-carousel mt-40 col-lg-8">
+
 							<div class="item">
-								<img class="img-fluid" src="img/why.jpg" alt="">
+								<img class="img-fluid" src="img/bretagne.jfif" alt="">
 								<div class="caption text-center mt-20">
-									<h6 class="text-uppercase">Vector Illustration</h6>
-									<p>LCD screens are uniquely modern in style, and the liquid crystals that make them work have <br> allowed humanity to create slimmer, more portable technology.</p>
+									<h6 class="text-uppercase">Arzal - Stornoway</h6>
+									<p>Du samedi 27 avril au vendredi 10 mai (14 jours) : La route du whisky</p>
+								</div>
+							</div>
+							<div class="item">
+								<img class="img-fluid" src="img/stornoway.jpg" alt="">
+								<div class="caption text-center mt-20">
+									<h6 class="text-uppercase">Stornoway - Tromso</h6>
+									<p>Du dimanche 12 mai au vendredi 24 mai (13 jours) : La route du nord</p>
+								</div>
+							</div>
+							<div class="item">
+								<img class="img-fluid" src="img/spitzberg.jfif" alt="">
+								<div class="caption text-center mt-20">
+									<h6 class="text-uppercase">Spitzberg</h6>
+									<p>Du Lundi 27 mai au 28 août</p>
 								</div>
 							</div>
 							<div class="item">
 								<img class="img-fluid" src="img/why.jpg" alt="">
 								<div class="caption text-center mt-20">
-									<h6 class="text-uppercase">Vector Illustration</h6>
-									<p>LCD screens are uniquely modern in style, and the liquid crystals that make them work have <br> allowed humanity to create slimmer, more portable technology.</p>
-								</div>
-							</div>
-							<div class="item">
-								<img class="img-fluid" src="img/why.jpg" alt="">
-								<div class="caption text-center mt-20">
-									<h6 class="text-uppercase">Vector Illustration</h6>
-									<p>LCD screens are uniquely modern in style, and the liquid crystals that make them work have <br> allowed humanity to create slimmer, more portable technology.</p>
-								</div>
-							</div>
-							<div class="item">
-								<img class="img-fluid" src="img/why.jpg" alt="">
-								<div class="caption text-center mt-20">
-									<h6 class="text-uppercase">Vector Illustration</h6>
-									<p>LCD screens are uniquely modern in style, and the liquid crystals that make them work have <br> allowed humanity to create slimmer, more portable technology.</p>
-								</div>
-							</div>
-							<div class="item">
-								<img class="img-fluid" src="img/why.jpg" alt="">
-								<div class="caption text-center mt-20">
-									<h6 class="text-uppercase">Vector Illustration</h6>
-									<p>LCD screens are uniquely modern in style, and the liquid crystals that make them work have <br> allowed humanity to create slimmer, more portable technology.</p>
+									<h6 class="text-uppercase">Tromso - Arzal </h6>
+									<p>Du mercredi 7 août au mercredi 28 août (22 jours) : retour Norvège par le nord et l’est du Spitzberg.</p>
 								</div>
 							</div>
 						</div>
