--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="item-slider relative" style="background: url(img/slider2.jpg);background-size: cover;">
+					<div class="item-slider relative" style="background: url(img/algol2.jpg);background-size: cover;">
 						<div class="overlay" style="background: rgba(0,0,0,.3)"></div>
 						<div class="container">
 							<div class="row fullscreen justify-content-center align-items-center">
@@ -100,7 +100,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="item-slider relative" style="background: url(img/slider3.jpg);background-size: cover;">
+					<div class="item-slider relative" style="background: url(img/algol3.jpg);background-size: cover;">
 						<div class="overlay" style="background: rgba(0,0,0,.3)"></div>
 						<div class="container">
 							<div class="row fullscreen justify-content-center align-items-center">
