--- a/index.html
+++ b/index.html
@@ -246,8 +246,19 @@ Le but des croisières est de faire participer tout le monde aux différents asp
 					<div class="row d-flex justify-content-center">
 						<div class="menu-content pb-60 col-lg-8">
 							<div class="title text-center">
-								<h1 class="mb-10">Some Features that Made us Unique</h1>
-								<p>Who are in extremely love with eco friendly system.</p>
+								<h1 class="mb-10">Navigations</h1>
+								<p>Jean-Baptiste Pigot est breveté Officier Marine Marchande et a parcouru de nombreux milles sur ALGOL en région proche Atlantique, aux Iles du Cap Vert, Açores, au Spitzberg, Islande, Groenland.
+<ul>
+<li>2008 : Spitzberg et Norvège</li>
+<li>2009 : Islande, Groenland</li>
+<li>2010 : Islande, Groenland</li>
+<li>2011 : Ecosse, Islande, Groenland</li>
+<li>2012 : Norvège, Islande, Groenland</li>
+<li>2013 et 2014 : Islande, Groenland</li>
+<li>2015, 2016 et 2017 : Spitzberg et Norvège</li>
+<li>2018 : Islande, Groenland</li>
+</ul>
+Jean-Baptiste Pigot, vous fera profiter de sa longue expérience et de ses compétences.</p>
 							</div>
 						</div>
 					</div>
@@ -256,10 +267,14 @@ Le but des croisières est de faire participer tout le monde aux différents asp
 							<div class="single-feature mb-30">
 								<div class="title d-flex flex-row pb-20">
 									<span class="lnr lnr-user"></span>
-									<h4><a href="#">Expert Technicians</a></h4>
+									<h4><a href="#">Navigation hauturiere</a></h4>
 								</div>
 								<p>
-									Usage of the Internet is becoming more common due to rapid advancement of technology and power.
+									Tenue de l' estime et du journal de bord, GPS
+									<br>
+Utilisation de logiciel de navigation (MaxSea)
+<br>
+Navigation astronomique: cosmographie, utilisation du sextant, calculs…
 								</p>
 							</div>
 						</div>
@@ -267,10 +282,14 @@ Le but des croisières est de faire participer tout le monde aux différents asp
 							<div class="single-feature mb-30">
 								<div class="title d-flex flex-row pb-20">
 									<span class="lnr lnr-license"></span>
-									<h4><a href="#">Professional Service</a></h4>
+									<h4><a href="#">Navigation par gros temps</a></h4>
 								</div>
 								<p>
-									Usage of the Internet is becoming more common due to rapid advancement of technology and power.
+									Sécurité des personnes, routes de sécurité.
+									<br>
+Manœuvre de voiles, équilibre du bateau, tenue de la barre
+<br>
+Utilisation du radar.
 								</p>
 							</div>
 						</div>
@@ -278,10 +297,14 @@ Le but des croisières est de faire participer tout le monde aux différents asp
 							<div class="single-feature mb-30">
 								<div class="title d-flex flex-row pb-20">
 									<span class="lnr lnr-phone"></span>
-									<h4><a href="#">Great Support</a></h4>
+									<h4><a href="#">Navigation de nuit</a></h4>
 								</div>
 								<p>
-									Usage of the Internet is becoming more common due to rapid advancement of technology and power.
+									Repérage des feux, phares et bouées, points par relèvement
+									<br>
+Tenue des quarts, manœuvre de nuit
+<br>
+Entrées et sorties de port, tenir un alignement
 								</p>
 							</div>
 						</div>
@@ -289,10 +312,12 @@ Le but des croisières est de faire participer tout le monde aux différents asp
 							<div class="single-feature">
 								<div class="title d-flex flex-row pb-20">
 									<span class="lnr lnr-rocket"></span>
-									<h4><a href="#">Technical Skills</a></h4>
+									<h4><a href="#">Radar</a></h4>
 								</div>
 								<p>
-									Usage of the Internet is becoming more common due to rapid advancement of technology and power.
+									Approche théorique, principe de fonctionnement, mouvement relatif.<br>
+Repérage de la côte, des bouées et des navires, signaux RACON.<br>
+Point radar. Détermination des routes des navires, manœuvres de sécurité.
 								</p>
 							</div>
 						</div>
@@ -300,24 +325,15 @@ Le but des croisières est de faire participer tout le monde aux différents asp
 							<div class="single-feature">
 								<div class="title d-flex flex-row pb-20">
 									<span class="lnr lnr-diamond"></span>
-									<h4><a href="#">Highly Recomended</a></h4>
+									<h4><a href="#">Météo</a></h4>
 								</div>
 								<p>
-									Usage of the Internet is becoming more common due to rapid advancement of technology and power.
+									Etude théorique des lois principales.<br>
+Applications pratiques : lecture des cartes météo, fichiers Grib, observation du ciel, comparaison avec le temps observé.
 								</p>
 							</div>
 						</div>
-						<div class="col-lg-4 col-md-6 ">
-							<div class="single-feature">
-								<div class="title d-flex flex-row pb-20">
-									<span class="lnr lnr-bubble"></span>
-									<h4><a href="#">Positive Reviews</a></h4>
-								</div>
-								<p>
-									Usage of the Internet is becoming more common due to rapid advancement of technology and power.
-								</p>
-							</div>
-						</div>
+
 					</div>
 				</div>
 			</section>
@@ -330,22 +346,22 @@ Le but des croisières est de faire participer tout le monde aux différents asp
 					<div class="row no-padding">
 						<div class="active-gallery">
 							<div class="item single-gallery">
-								<img src="img/g1.jpg" alt="">
+								<img src="img/Manoeuvre.jpg" alt="">
 							</div>
 							<div class="item single-gallery">
-								<img src="img/g2.jpg" alt="">
+								<img src="img/c2.png" alt="">
 							</div>
 							<div class="item single-gallery">
-								<img src="img/g3.jpg" alt="">
+								<img src="img/c3.jpg" alt="">
 							</div>
 							<div class="item single-gallery">
-								<img src="img/g4.jpg" alt="">
+								<img src="img/c4.png" alt="">
 							</div>
 							<div class="item single-gallery">
-								<img src="img/g5.jpg" alt="">
+								<img src="img/c5.png" alt="">
 							</div>
 							<div class="item single-gallery">
-								<img src="img/g6.jpg" alt="">
+								<img src="img/c6.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -360,57 +376,12 @@ Le but des croisières est de faire participer tout le monde aux différents asp
 					<div class="row d-flex justify-content-center">
 						<div class="menu-content pb-60 col-lg-8">
 							<div class="title text-center">
-								<h1 class="mb-10">Frequently Asked Questions</h1>
-								<p>Who are in extremely love with eco friendly system.</p>
+								<h1 class="mb-10">Foire Aux Questions</h1>
+								<p></p>
 							</div>
 						</div>
 					</div>
-					<div class="row d-flex align-items-center">
-						<div class="counter-left col-lg-3 col-md-3">
-							<div class="single-facts">
-								<h2 class="counter">5962</h2>
-								<p>Projects Completed</p>
-							</div>
-							<div class="single-facts">
-								<h2 class="counter">2394</h2>
-								<p>New Projects</p>
-							</div>
-							<div class="single-facts">
-								<h2 class="counter">1439</h2>
-								<p>Tickets Submitted</p>
-							</div>
-							<div class="single-facts">
-								<h2 class="counter">933</h2>
-								<p>Cup of Coffee</p>
-							</div>
-						</div>
-						<div class="faq-content col-lg-9 col-md-9">
-							<div class="single-faq">
-								<h2 class="text-uppercase">
-									Are your Templates responsive?
-								</h2>
-								<p>
-									“Few would argue that, despite the advancements of feminism over the past three decades, women still face a double standard when it comes to their behavior. While men’s borderline-inappropriate behavior.
-								</p>
-							</div>
-							<div class="single-faq">
-								<h2 class="text-uppercase">
-									Does it have all the plugin as mentioned?
-								</h2>
-								<p>
-									“Few would argue that, despite the advancements of feminism over the past three decades, women still face a double standard when it comes to their behavior. While men’s borderline-inappropriate behavior.
-								</p>
-							</div>
-							<div class="single-faq">
-								<h2 class="text-uppercase">
-									Can i use the these theme for my client?
-								</h2>
-								<p>
-									“Few would argue that, despite the advancements of feminism over the past three decades, women still face a double standard when it comes to their behavior. While men’s borderline-inappropriate behavior.
-								</p>
-							</div>
-						</div>
-					</div>
+
 				</div>
 			</section>
 			<!-- End faq Area -->
@@ -418,13 +389,12 @@ Le but des croisières est de faire participer tout le monde aux différents asp
 
 			<!-- Start Video Area -->
 			<section class="video-area pt-40 pb-40">
-				<div class="overlay overlay-bg"></div>
 				<div class="container">
 					<div class="video-content">
-						<a href="http://www.youtube.com/watch?v=0O2aH4XLbto" class="play-btn"><img src="img/play-btn.png" alt=""></a>
+						<a href="https://www.youtube.com/watch?v=yrlBOflJsTU" class="play-btn"><img src="img/play-btn.png" alt=""></a>
 						<div class="video-desc">
-							<h3 class="h2 text-white text-uppercase">Being unique is the preference</h3>
-							<h4 class="text-white">Youtube video will appear in popover</h4>
+							<h3 class="h2 text-white text-uppercase">Croisière au Groenland 2012</h3>
+							<h4 class="text-white">Cliquez pour voir la vidéo</h4>
 						</div>
 					</div>
 				</div>
@@ -449,23 +419,23 @@ Le but des croisières est de faire participer tout le monde aux différents asp
 					<div class="row d-flex justify-content-center">
 						<div class="menu-content pb-60 col-lg-8">
 							<div class="title text-center">
-								<h1 class="mb-10">If you need, Just drop us a line</h1>
-								<p>Who are in extremely love with eco friendly system.</p>
+								<h1 class="mb-10">Contactez nous !</h1>
+								<!--<p>Who are in extremely love with eco friendly system.</p>-->
 							</div>
 						</div>
 					</div>
 					<form class="form-area " id="myForm" action="mail.php" method="post" class="contact-form text-right">
 						<div class="row">
 						<div class="col-lg-6 form-group">
-							<input name="name" placeholder="Enter your name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your name'" class="common-input mb-20 form-control" required="" type="text">
+							<input name="name" placeholder="Entrez votre nom" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Entrez votre nom'" class="common-input mb-20 form-control" required="" type="text">
 
-							<input name="email" placeholder="Enter email address" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'" class="common-input mb-20 form-control" required="" type="email">
+							<input name="email" placeholder="Entrez votre adresse mail" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Entrez votre adresse mail'" class="common-input mb-20 form-control" required="" type="email">
 
-							<input name="subject" placeholder="Enter your subject" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your subject'" class="common-input mb-20 form-control" required="" type="text">
+							<input name="subject" placeholder="Entrez votre sujet" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Entrez votre sujet'" class="common-input mb-20 form-control" required="" type="text">
 						</div>
 						<div class="col-lg-6 form-group">
-							<textarea class="common-textarea mt-10 form-control" name="message" placeholder="Messege" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'" required=""></textarea>
-							<button class="primary-btn mt-20">Send Message<span class="lnr lnr-arrow-right"></span></button>
+							<textarea class="common-textarea mt-10 form-control" name="message" placeholder="Message" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Message'" required=""></textarea>
+							<button class="primary-btn mt-20">Envoyez votre message<span class="lnr lnr-arrow-right"></span></button>
 							<div class="alert-msg">
 						</div>
 						</div></div>
@@ -486,7 +456,7 @@ Le but des croisières est de faire participer tout le monde aux différents asp
 									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore magna aliqua.
 								</p>
 								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            		<p class="footer-text">Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
+            		<p class="footer-text">Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved </p>
             		<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 							</div>
 						</div>
