--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 							    <ul class="navbar-nav">
 									<li><a href="#home">Accueil</a></li>
 									<li><a href="#about">A propos</a></li>
-									<li><a href="#secvice">Service</a></li>
-									<li><a href="#gallery">Gallery</a></li>
+									<li><a href="#secvice">Navigations</a></li>
+									<li><a href="#gallery">Gallerie</a></li>
 									<li><a href="#faq">Faq</a></li>
 									<li><a href="#contact">Contact</a></li>
 									<!-- Dropdown -->
@@ -56,8 +56,11 @@
 								        Pages
 								      </a>
 								      <div class="dropdown-menu">
-								        <a class="dropdown-item" href="generic.html">Generic</a>
-								        <a class="dropdown-item" href="elements.html">Elements</a>
+								        <a class="dropdown-item" href="generic.html">A bord</a>
+								        <a class="dropdown-item" href="elements.html">Inscription</a>
+												<a class="dropdown-item" href="elements.html">Equipement</a>
+												<a class="dropdown-item" href="elements.html">Nos favoris</a>
+												<a class="dropdown-item" href="elements.html">Photos</a>
 								      </div>
 								    </li>
 							    </ul>
@@ -451,26 +454,26 @@ Applications pratiques : lecture des cartes météo, fichiers Grib, observation 
 					<div class="row">
 						<div class="col-lg-5 col-md-6 col-sm-6">
 							<div class="single-footer-widget">
-								<h6>About Us</h6>
+								<h6>Contact</h6>
 								<p>
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore magna aliqua.
+									ALGOL OCEANS - Sarl au capital de 90 000 € <br> RCS Vannes B 402 890 339 <br> Le Téno 56130 MARZAN  <br>  Tél : 02 97 45 03 45      Port : 06 74 10 20 36
 								</p>
 								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            		<p class="footer-text">Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved </p>
+            		<p class="footer-text">Copyright &copy;<script>document.write(new Date().getFullYear());</script> Tous droits reservés </p>
             		<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 							</div>
 						</div>
 						<div class="col-lg-5  col-md-6 col-sm-6">
 							<div class="single-footer-widget">
 								<h6>Newsletter</h6>
-								<p>Stay update with our latest</p>
+								<p>Avez vents de nos dernières nouvelles</p>
 								<div class="" id="mc_embed_signup">
 
 										<form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="form-inline">
 
 										<div class="d-flex flex-row">
 
-											<input class="form-control" name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required="" type="email">
+											<input class="form-control" name="EMAIL" placeholder="Entrez Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Entrez Email '" required="" type="email">
 
 
 				                            	<button class="click-btn btn btn-default"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
@@ -489,8 +492,7 @@ Applications pratiques : lecture des cartes météo, fichiers Grib, observation 
 						</div>
 						<div class="col-lg-2 col-md-6 col-sm-6 social-widget">
 							<div class="single-footer-widget">
-								<h6>Follow Us</h6>
-								<p>Let us be social</p>
+								<h6>Suivez nous</h6>
 								<div class="footer-social d-flex align-items-center">
 									<a href="#"><i class="fa fa-facebook"></i></a>
 									<a href="#"><i class="fa fa-twitter"></i></a>
