--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 							    <ul class="navbar-nav">
 									<li><a href="#home">Accueil</a></li>
 									<li><a href="#about">A propos</a></li>
+									<li><a href="#project">Programme 2019</a>
 									<li><a href="#secvice">Navigations</a></li>
 									<li><a href="#gallery">Gallerie</a></li>
 									<li><a href="#faq">Faq</a></li>
@@ -81,7 +82,7 @@
 										<h4 class="text-white mb-20 text-uppercase">Croisières à la voile</h4>
 										<h1 class="text-uppercase text-white">Algol Océans</h1>
 										<p class="text-white"> Irlande, Ecosse, Feroe, fjords Islande, Groenland, Norvège, Spitzberg, régions polaires, icebergs et baleines</p>
-										<a href="#" class="text-uppercase header-btn">Programme 2019</a>
+										<a href="#project" class="text-uppercase header-btn">Programme 2019</a>
 									</div>
 								</div>
 
@@ -97,7 +98,7 @@
 										<h4 class="text-white mb-20 text-uppercase">Croisières à la voile</h4>
 										<h1 class="text-uppercase text-white">Algol Océans</h1>
 										<p class="text-white"> Irlande, Ecosse, Feroe, fjords Islande, Groenland, Norvège, Spitzberg, régions polaires, icebergs et baleines</p>
-										<a href="#" class="text-uppercase header-btn">Programme 2019</a>
+										<a href="#project" class="text-uppercase header-btn">Programme 2019</a>
 									</div>
 								</div>
 							</div>
@@ -112,7 +113,7 @@
 										<h4 class="text-white mb-20 text-uppercase">Croisières à la voile</h4>
 										<h1 class="text-uppercase text-white">Algol Océans</h1>
 										<p class="text-white"> Irlande, Ecosse, Feroe, fjords Islande, Groenland, Norvège, Spitzberg, régions polaires, icebergs et baleines</p>
-										<a href="#" class="text-uppercase header-btn">Programme 2019</a>
+										<a href="#project" class="text-uppercase header-btn">Programme 2019</a>
 									</div>
 								</div>
 							</div>
@@ -230,7 +231,7 @@ Le but des croisières est de faire participer tout le monde aux différents asp
 								</div>
 							</div>
 							<div class="item">
-								<img class="img-fluid" src="img/why.jpg" alt="">
+								<img class="img-fluid" src="img/tromso.jpg" alt="">
 								<div class="caption text-center mt-20">
 									<h6 class="text-uppercase">Tromso - Arzal </h6>
 									<p>Du mercredi 7 août au mercredi 28 août (22 jours) : retour Norvège par le nord et l’est du Spitzberg.</p>
