--- a/galerie.html
+++ b/galerie.html
@@ -120,7 +120,7 @@
         </div>
         <div class="item-slider relative" style="background: url(img/accueil/algol3.jpg);background-size: cover;">
             <div class="overlay" style="background: rgba(0,0,0,.3)"></div>
-            <div class="container"> 
+            <div class="container">
                 <div class="row fullscreen justify-content-center align-items-center">
                     <div class="col-md-10 col-12">
                         <div class="banner-content text-center">
@@ -161,6 +161,116 @@
                     <div class="col-md-6">
                         <a href="img/algol/IMG_76492.jpg" class="img-pop-up">
                             <div class="single-gallery-image" style="background: url(img/algol/IMG_76492.jpg);"></div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="whole-wrap">
+        <div class="container">
+            <!-- end contact Area -->
+            <div class="section-top-border">
+                <h3>Spitzberg</h3>
+                <div class="row gallery-item">
+                    <div class="col-md-4">
+                        <a href="img/spitzberg/DSC01273.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/spitzberg/DSC01273.jpg);"></div>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="img/spitzberg/DSC01616.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/spitzberg/DSC01616.jpg);"></div>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="img/spitzberg/DSC01636.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/spitzberg/DSC01636.jpg);"></div>
+                        </a>
+                    </div>
+                    <div class="col-md-6">
+                        <a href="img/spitzberg/DSC01959.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/spitzberg/DSC01959.jpg);"></div>
+                        </a>
+                    </div>
+                    <div class="col-md-6">
+                        <a href="img/spitzberg/DSC01986.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/spitzberg/DSC01986.jpg);"></div>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="img/spitzberg/DSC01994.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/spitzberg/DSC01994.jpg);"></div>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="img/spitzberg/DSC02018.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/spitzberg/DSC02018.jpg);"></div>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="img/spitzberg/DSC02019.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/spitzberg/DSC02019.jpg);"></div>
+                        </a>
+                    </div>
+                    <div class="col-md6">
+                        <a href="img/spitzberg/DSC02028.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/spitzberg/DSC02028.jpg);"></div>
+                        </a>
+                    </div>
+                    <div class="col-md6">
+                        <a href="img/spitzberg/DSC02035.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/spitzberg/DSC02035.jpg);"></div>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="img/spitzberg/DSC02039.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/spitzberg/DSC02039.jpg);"></div>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="img/spitzberg/DSC02042.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/spitzberg/DSC02042.jpg);"></div>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="img/spitzberg/DSC02043.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/spitzberg/DSC02043.jpg);"></div>
+                        </a>
+                    </div>
+                    <div class="col-md6">
+                        <a href="img/spitzberg/DSC02045.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/spitzberg/DSC02045.jpg);"></div>
+                        </a>
+                    </div>
+                    <div class="col-md6">
+                        <a href="img/spitzberg/DSC02055.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/spitzberg/DSC02055.jpg);"></div>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="img/spitzberg/DSC02066.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/spitzberg/DSC02066.jpg);"></div>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="img/spitzberg/DSC02075.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/spitzberg/DSC02075.jpg);"></div>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="img/spitzberg/DSC02107.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/spitzberg/DSC02107.jpg);"></div>
+                        </a>
+                    </div>
+                    <div class="col-md6">
+                        <a href="img/spitzberg/DSC02114.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/spitzberg/DSC02114.jpg);"></div>
+                        </a>
+                    </div>
+                    <div class="col-md6">
+                        <a href="img/spitzberg/DSC02121.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/spitzberg/DSC02121.jpg);"></div>
                         </a>
                     </div>
                 </div>
@@ -238,7 +348,8 @@
                         </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         <p class="footer-text">Copyright &copy;
-                            <script>document.write(new Date().getFullYear());</script> Tous droits reservés </p>
+                            <script>document.write(new Date().getFullYear());</script> Tous droits reservés
+                        </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </div>
                 </div>
