--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </section>
 
     <section class="default-banner active-blog-slider">
-        <div class="item-slider relative" style="background: url(img/accueil/glacier.jpg);background-size: cover;">
+        <div class="item-slider relative" style="background: url(img/glacier.jpg);background-size: cover;">
             <div class="overlay" style="background: rgba(0,0,0,.3)"></div>
             <div class="container">
                 <div class="row fullscreen justify-content-center align-items-center">
@@ -98,8 +98,8 @@
                         <div class="banner-content text-center">
                             <h4 class="text-white mb-20 text-uppercase">Croisières à la voile</h4>
                             <h1 class="text-uppercase text-white">Algol Océans</h1>
-                            <p class="text-white"> Irlande, Ecosse, Feroe, fjords Islande, Groenland, Norvège, Spitzberg, régions polaires, icebergs
-                                et baleines</p>
+                            <p class="text-white"> Irlande, Ecosse, Feroe, fjords Islande, Groenland, Norvège, Spitzberg,
+                                régions polaires, icebergs et baleines</p>
                             <a href="#project" class="text-uppercase header-btn">Programme 2019</a>
                         </div>
                     </div>
@@ -115,8 +115,8 @@
                         <div class="banner-content text-center">
                             <h4 class="text-white mb-20 text-uppercase">Croisières à la voile</h4>
                             <h1 class="text-uppercase text-white">Algol Océans</h1>
-                            <p class="text-white"> Irlande, Ecosse, Feroe, fjords Islande, Groenland, Norvège, Spitzberg, régions polaires, icebergs
-                                et baleines</p>
+                            <p class="text-white"> Irlande, Ecosse, Feroe, fjords Islande, Groenland, Norvège, Spitzberg,
+                                régions polaires, icebergs et baleines</p>
                             <a href="#project" class="text-uppercase header-btn">Programme 2019</a>
                         </div>
                     </div>
@@ -131,8 +131,8 @@
                         <div class="banner-content text-center">
                             <h4 class="text-white mb-20 text-uppercase">Croisières à la voile</h4>
                             <h1 class="text-uppercase text-white">Algol Océans</h1>
-                            <p class="text-white"> Irlande, Ecosse, Feroe, fjords Islande, Groenland, Norvège, Spitzberg, régions polaires, icebergs
-                                et baleines</p>
+                            <p class="text-white"> Irlande, Ecosse, Feroe, fjords Islande, Groenland, Norvège, Spitzberg,
+                                régions polaires, icebergs et baleines</p>
                             <a href="#project" class="text-uppercase header-btn">Programme 2019</a>
                         </div>
                     </div>
@@ -150,7 +150,8 @@
                         <h1 class="mb-10">Groenland et Islande, Spitzberg, Ecosse, Irlande.</h1>
                         <p>Nous vous proposons d’embarquer sur Algol, voilier en acier de 17,50m, à la découverte de régions
                             méconnues et sauvages.</p>
-                        <p>Vous pouvez également nous rejoindre en Bretagne sud le temps d’un week - end au printemps ou à l’automne.</p>
+                        <p>Vous pouvez également nous rejoindre en Bretagne sud le temps d’un week - end au printemps ou
+                            à l’automne.</p>
                     </div>
                 </div>
             </div>
@@ -244,7 +245,9 @@
                             <p>Prix par personne : 1 700 € + 420 € caisse de bord.</p>
                             <br>
                             <br>
-                            <a href="route_whisky_2019.html" class="text-uppercase genric-btn primary-border circle">Programme détaillé</a>
+                            <a href="route_whisky_2019.html" class="text-uppercase genric-btn primary-border circle">Programme
+                                détaillé
+                            </a>
                         </div>
                     </div>
                     <div class="item">
@@ -255,7 +258,9 @@
                             <p>Embarquement : 11/05 à 18h00, débarquement : 25/05 le matin.</p>
                             <p>Prix par personne : 1 600 € + 390 € caisse de bord.</p>
                             <br>
-                            <a href="route_nord_2019.html" class="text-uppercase genric-btn primary-border circle">Programme détaillé</a>
+                            <a href="route_nord_2019.html" class="text-uppercase genric-btn primary-border circle">Programme
+                                détaillé
+                            </a>
                         </div>
                     </div>
                     <div class="item">
@@ -274,11 +279,15 @@
                         <img class="img-fluid" src="img/accueil/DSC01801.jpg" alt="">
                         <div class="caption text-center mt-20">
                             <h6 class="text-uppercase">Tromso - Arzal </h6>
-                            <p>Du mercredi 7 août au mercredi 28 août (22 jours) : retour Norvège par le nord et l’est du Spitzberg.</p>
+                            <p>Du mercredi 7 août au mercredi 28 août (22 jours) : retour Norvège par le nord et l’est du
+                                Spitzberg.
+                            </p>
                             <p>Embarquement : 30/08 à partir de 18h00, débarquement : 21/09 le matin</p>
                             <p>Prix par personne : 1 700 € + 630 € caisse de bord.</p>
                             <br>
-                            <a href="retour_norvege.html" class="text-uppercase genric-btn primary-border circle">Programme détaillé</a>
+                            <a href="retour_norvege.html" class="text-uppercase genric-btn primary-border circle">Programme
+                                détaillé
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -289,11 +298,11 @@
 
 
     <!-- Start feature Area -->
-    <section class="feature-area section-gap" id="navigations">
+    <section class="section-gap info-area" id="navigations">
         <div class="container">
-            <div class="row d-flex justify-content-center">
+            <div class="">
                 <div class="menu-content pb-60 col-lg-20">
-                    <div class="title text-center">
+                    <div class="info-content">
                         <h1 class="mb">Navigations</h1>
                         <br>
                         <br>
@@ -302,7 +311,7 @@
                             <div class="col-lg">
                                 <img src="img/accueil/jeanbaptiste.jpg" alt="" class="img-fluid">
                             </div>
-                            <div class="col-md mt-sm-20">
+                            <div class="col-lg-6 col-md-12 no-padding info-rigth">
                                 <p>Jean-Baptiste Pigot est breveté Officier Marine Marchande et a parcouru de nombreux milles
                                     sur ALGOL en région proche Atlantique, aux Iles du Cap Vert, Açores, au Spitzberg, Islande,
                                     Groenland.
@@ -316,7 +325,8 @@
                                         <li>2015, 2016 et 2017 : Spitzberg et Norvège</li>
                                         <li>2018 : Islande, Groenland</li>
                                     </ul>
-                                    Jean-Baptiste Pigot, vous fera profiter de sa longue expérience et de ses compétences.</p>
+                                    Jean-Baptiste Pigot, vous fera profiter de sa longue expérience et de ses compétences.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -454,8 +464,8 @@
                             onblur="this.placeholder = 'Entrez votre adresse mail'" class="common-input mb-20 form-control" required=""
                             type="email">
 
-                            <input name="phone" placeholder="Entrez votre téléphone" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Entrez votre téléphone'"
-                            class="common-input mb-20 "  type="text">
+                        <input name="phone" placeholder="Entrez votre téléphone" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Entrez votre téléphone'"
+                            class="common-input mb-20 " type="text">
 
                         <input name="subject" placeholder="Entrez votre sujet" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Entrez votre sujet'"
                             class="common-input mb-20 form-control" required="" type="text">
@@ -491,7 +501,8 @@
                         </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         <p class="footer-text">Copyright &copy;
-                            <script>document.write(new Date().getFullYear());</script> Tous droits reservés </p>
+                            <script>document.write(new Date().getFullYear());</script> Tous droits reservés
+                        </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </div>
                 </div>
