--- a/retour_norvege.html
+++ b/retour_norvege.html
@@ -110,21 +110,22 @@
                     <div class="col-md mt-sm">
                         <p>
                             <br>
-                            <br> Nous partons de Tromsø fin août et le choix de nos escales sera guidé par les conditions météorologiques.
+                            <br> Nous partons de Tromsø fin août et le choix de nos escales sera guidé par les conditions
+                            météorologiques.
                             <br>
-                            <br>Le voyage dure trois semaines, ce qui nous permet de nous arrêter pour quelques escales, mais
-                            ce voyage s’adresse avant tout à des personnes qui veulent connaitre la vie en mer.
+                            <br>Le voyage dure trois semaines, ce qui nous permet de nous arrêter pour quelques escales,
+                            mais ce voyage s’adresse avant tout à des personnes qui veulent connaitre la vie en mer.
                             <br>
-                            <br>Nous pouvons privilégier les escales dans les îles Lofoten, les fjords norvégiens ou plus au
-                            sud : Strangford Lough, Dublin, les îles de Man ou Scilly.
+                            <br>Nous pouvons privilégier les escales dans les îles Lofoten, les fjords norvégiens ou plus
+                            au sud : Strangford Lough, Dublin, les îles de Man ou Scilly.
                             <br>
                             <br>Il est possible aussi de traverser l’Ecosse par le canal calédonien.
                             <br>
-                            <br>Ce passage permet de continuer à faire route en cas de mauvais temps mais nous avons besoin d’au
-                            moins trois jours pour le traverser.
+                            <br>Ce passage permet de continuer à faire route en cas de mauvais temps mais nous avons besoin
+                            d’au moins trois jours pour le traverser.
                             <br>
-                            <br> Avant l’arrivée à Arzal, nous aimons bien faire une escale à Belle Ile pour profiter de la côte
-                            de Bretagne Sud.
+                            <br> Avant l’arrivée à Arzal, nous aimons bien faire une escale à Belle Ile pour profiter de
+                            la côte de Bretagne Sud.
                     </div>
                 </div>
             </div>
@@ -149,7 +150,8 @@
                         </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         <p class="footer-text">Copyright &copy;
-                            <script>document.write(new Date().getFullYear());</script> Tous droits reservés </p>
+                            <script>document.write(new Date().getFullYear());</script> Tous droits reservés
+                        </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </div>
                 </div>
